--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "firebase": "^5.11.1",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "v-viewer": "^1.4.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vue-session": "^1.0.0",
+    "vue2-simplert": "^1.0.0",
+    "vuetify": "^1.5.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
@@ -19,7 +26,11 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.5.21"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-cli-plugin-vuetify": "^0.5.0",
+    "vue-template-compiler": "^2.5.21",
+    "vuetify-loader": "^1.0.5"
   },
   "eslintConfig": {
     "root": true,
